<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="br.com.adensar.adensar_mobile.LevantamentoArboreoRetomarActivity"
    tools:showIn="@layout/activity_levantamento_arboreo_retomar">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/especimesLocalizados_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/especimes_localizados" />

        <TextView
            android:id="@+id/appLocalizado_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/apps_localizados" />

        <TextView
            android:id="@+id/trechoDesignado_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trecho_designado" />

        <TextView
            android:id="@+id/equipe_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/equipe" />


        <Button
            android:id="@+id/levarb_finish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/finalizar_levantamento" />
        <TextView
            android:id="@+id/txtTudo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
